corrected stretching for half column

--- a/css/components/_columns.scss
+++ b/css/components/_columns.scss
@@ -7,6 +7,10 @@
     margin: 0 auto;
 }
 
+.columns.column-half {
+    align-items: stretch;
+}
+
 .columns.column-half > * {
     width: 50%;
     min-width: 300px;
